change header svg color

--- a/section/static/css/styles.css
+++ b/section/static/css/styles.css
@@ -119,6 +119,13 @@ header {
     padding-bottom: 10px;
     position: relative;
 
+    svg {
+        fill: black;
+        & g {
+            fill: black;
+        }
+    }
+
     & .icon {
         display: flex;
         justify-content: center;
