--- a/section/static/css/styles.css
+++ b/section/static/css/styles.css
@@ -1134,3 +1134,39 @@ input[type="checkbox"] {
         }
     }
 }
+.loading {
+  min-width: 100%;
+  min-height: 50svh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .round {
+    width: 30px;
+    height: 30px;
+
+    border-radius: 100%;
+    margin: 0 10px;
+    animation: bounce 1.3s infinite ease-in-out;
+  }
+
+  .round:nth-child(1) { animation-delay: 0s; }
+  .round:nth-child(2) { animation-delay: 0.2s; }
+  .round:nth-child(3) { animation-delay: 0.4s; }
+  .round:nth-child(4) { animation-delay: 0.6s; }
+  .round:nth-child(5) { animation-delay: 0.8s; }
+
+
+}
+@keyframes bounce {
+    0% {
+      margin-top: 0px;
+      background-color: var(--main_purple);
+    }
+    25% {
+      background-color: var(--main_purple);
+    }
+    50% {
+      margin-top: 100px;
+    }
+}
