added transition for main tab data

--- a/section/templates/section/inc/tabs/_main.html
+++ b/section/templates/section/inc/tabs/_main.html
@@ -6,6 +6,7 @@
             feed.getCurrentPageItems().length > 0 &&
             !feed.sections[appData.current_section?.id].loading
          "
+         x-transition.duration.700ms
          class="tab"
          style="display: none;"
     >
