--- a/section/templates/section/no_data.html
+++ b/section/templates/section/no_data.html
@@ -14,3 +14,5 @@
         <p>Попробуй прямо сейчас — это просто и даже немного интересно!</p>
     </div>
 </div>
+
+{% include 'section/inc/_faq.html' %}
