--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,7 @@
     <script src="{% static 'js/receipt_feed.js' %}" defer></script>
     {% block extra_head %}
     {% endblock %}
+    <script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/collapse@3.x.x/dist/cdn.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
 </head>
 <body x-data="tabsHandler()" x-init="init_tabs()" style="">
