move FAQ to separate folder

--- a/section/templates/section/inc/tabs/_account.html
+++ b/section/templates/section/inc/tabs/_account.html
@@ -10,5 +10,5 @@
         <input type="checkbox">
     </div>
 
-    {% include 'section/inc/_faq.html' %}
+    {% include 'section/inc/faq/_faq.html' %}
 </div>
