--- a/section/templates/section/inc/tabs/_account.html
+++ b/section/templates/section/inc/tabs/_account.html
@@ -1,3 +1,4 @@
 <div x-show="$store.tabs.tab === 'account'" style="display: none;" class="tab">
+    {% include 'user/feedback_form.html' %}
     {% include 'section/inc/faq/_faq.html' %}
 </div>
