--- a/section/templates/section/inc/_save.html
+++ b/section/templates/section/inc/_save.html
@@ -1,1 +1,2 @@
-<div id="save_menu" class="down_btn save">Сохранить</div>
+{% load i18n %}
+<div id="save_menu" class="down_btn save">{% trans 'Save' %}</div>
