--- a/section/templates/section/inc/main/feed/_receipts_empty.html
+++ b/section/templates/section/inc/main/feed/_receipts_empty.html
@@ -1,4 +1,5 @@
+{% load i18n %}
 <template
         x-if="appData.current_section && feed.sections[appData.current_section?.id] && feed.getCurrentPageItems().length === 0 && !feed.sections[appData.current_section?.id].loading">
-    <p>Нет доступных чеков.</p>
+    <p>{% trans 'No available spending' %}</p>
 </template>
