--- a/section/templates/section/inc/main/feed/_header.html
+++ b/section/templates/section/inc/main/feed/_header.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 <div class="main_block header">
     <div class="block">
         <div class="size">
@@ -13,7 +14,7 @@
         </div>
     </div>
 
-    <div class="title" style="font-weight: bold;">Чеки</div>
+    <div class="title" style="font-weight: bold;">{% trans 'Expenses' %}</div>
     <div class="block">
         <div class="photo_block">
             <div class="photo"
